--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
 			<h2 class="main-subtitle">Project Management</h2>
 		</div>
 
+		<a href="#" class="lg-btn">
+			<div class="get-started">
+				Get Started
+			</div>
+		</a>
+
 	</body>
 </html>
