--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 	<body class="radial-background">
 
+		<div class="menu-icon">
+			<i class="fa fa-bars fa 2x"></i>
+		</div>
+
 		<div class="main-title-container">
 			<h1 class="main-title">Pluto</h1>
 			<i class="fa fa-rocket"></i>
