--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 	<body class="radial-background">
 
 		<div class="menu-icon">
-			<i class="fa fa-bars fa 2x"></i>
+			<i class="fa fa-bars fa-lg"></i>
 		</div>
+		<a href="https://github.com/JPadley18/pluto">
+			<div class="github-icon">
+				<i class="fa fa-github fa-lg"></i>
+			</div>
+		</a>
 
 		<div class="main-title-container">
 			<h1 class="main-title">Pluto</h1>
